--- a/views/blog/home.ejs
+++ b/views/blog/home.ejs
@@ -10,7 +10,7 @@
 <!-- Looping through posts array to printout the title and content -->
 <% posts.forEach(post =>{ %>
       <h3><%=post.title%></h3>
-      <p><%=post.content.substr(0,100)+'...' %><a href="/post/<%=post.title %>"">Read More</a></p>
+      <p><%=post.content.substr(0,100)+'...' %><a href="/blog/post/<%=post.title %>"">Read More</a></p>
 <% }) %>
 
 
