--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
       </td>
       <td>
         <button type="button" name="button">
-          <a href="/show">Show all items</a>
+          <a href="/">Show all items</a>
         </button>
       </td>
 
@@ -29,25 +29,36 @@
 
 
 
-    <form  action="/" method="post">
+    <form  action="/add" method="post">
       <p>Please input information related to product:</p>
-      <input type="text" name="product" placeholder="product">
 
-      <br><br>
-      <label for="measure">Amount:</label>
-  <select name="measure" id="measure">
-    <option value="kg">Kg</option>
-    <option value="grm">grm</option>
-    <option value="litr">litr</option>
-    <option value="cc">cc</option>
-  </select>
+      <br>
+      <label for="brand">brand: </label>
+      <input type="text" name="brand" placeholder="brand" autocomplete="off">
+      <br>
+      <label for="product">product: </label>
+      <input type="text" name="product" placeholder="product" autocomplete="off">
+      <br>
+      <label for="price">price: </label>
+      <input type="number" name="price" placeholder="price" autocomplete="off">
+      <br>
+      <label for="amount">Amount:  </label>
+      <select name="measure" id="measure">
+        <option value="kg">Kg</option>
+        <option value="grm">grm</option>
+        <option value="litr">litr</option>
+        <option value="cc">cc</option>
+      </select>
 
 
 
-      <input type="number" name="amount" placeholder="amount">
+      <input type="number" name="amount" placeholder="amount" autocomplete="off">
       <br><br>
       <label for="date">expiration date:  </label>
       <input type="date" name="expiration" placeholder="expiration date">
+      <br>
+      <label for="date">quantity:  </label>
+      <input type="number" name="quantity" placeholder="quantity" autocomplete="off">
       <br>
       <button type="submit">Add new Item!</button>
     </form>
